# sblim-cmpi-service

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Linux_Service.c  Makefile.am  NEWS  README  THANKS  acinclude.m4  cimlxs.c  cimlxs.h  cmpiOSBase_HostedServiceProvider.c  cmpiOSBase_Service.c  cmpiOSBase_Service.h  cmpiOSBase_ServiceProcess.c  cmpiOSBase_ServiceProcess.h  cmpiOSBase_ServiceProcessProvider.c  cmpiOSBase_ServiceProvider.c  configure.ac  listservices  makefile  provider-register.sh  sblim-cmpi-service.rh.spec  sblim-cmpi-service.spec.in  setting.cmpi  stdhdr.i  svclist.c
mof/: Linux_Service.mof  Linux_Service.registration  Linux_ServiceRegistration.mof  makefile.pegasus  makefile.standalone
